adjusted table size/text. placed in center

--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
     </ul>
     <p class="title">Job Board App</p>
     <p>Welcome To The Board</p>
+    <p class="chart">This is where the chart will go
+        <table>
+            <tr>
+                <th>INPUT</th>
+                <th>OUTPUT</th>
+            </tr>
+            <tr>
+                <td>TEXT</td>
+                <td>TEXT</td>
+            </tr>
+        </table>
+
+    </p>
   </body>
 </html>
