--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300"
-    rel="stylesheet"
-    type="text/css"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
   <head>
     <meta charset="UTF-8" />
@@ -14,10 +10,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="default.asp">Home</a></li>
-      <li><a href="news.asp">Blah</a></li>
-      <li><a href="contact.asp">Blah</a></li>
-      <li><a href="about.asp">Blah</a></li>
+      <li><a href="http://placekitten.com/200/300">Home</a></li>
+      <li><a href="http://placekitten.com/500/300">Blah</a></li>
+      <li><a href="http://placekitten.com/600/300">Blah</a></li>
+      <li><a href="http://placekitten.com/400/300">Blah</a></li>
     </ul>
     <p class="title">Job Board App</p>
     <p>Welcome To The Board</p>
