--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet"/>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap"
+    rel="stylesheet"
+  />
   <link rel="stylesheet" href="style.css" />
   <head>
     <meta charset="UTF-8" />
@@ -9,15 +12,21 @@
     <title>Job Board App</title>
   </head>
   <body>
-    <ul>
-      <li><a href="http://placekitten.com/200/300">Home</a></li>
-      <li><a href="http://placekitten.com/500/300">Blah</a></li>
-      <li><a href="http://placekitten.com/600/300">Blah</a></li>
-      <li><a href="http://placekitten.com/400/300">Blah</a></li>
+    <ul class="nav">
+      <li class="item1"><a href="http://placekitten.com/200/300">Home</a></li>
+      <li class="item2"><a href="http://placekitten.com/500/300">Text</a></li>
+      <li class="item3"><a href="http://placekitten.com/600/300">Text</a></li>
+      <li class="item4"><a href="http://placekitten.com/400/300">Text</a></li>
     </ul>
     <p class="title">Job Board App</p>
     <p>Welcome To The Board</p>
-    <p class="chart">This is where the chart will go
+    <ul class="tableheader">
+      <li class="header">text</li>
+    </ul>
+    <ul class="tablecontent">
+      <li class="box">text</li>
+    </ul>
+    <!--<p class="chart">
         <table>
             <tr>
                 <th>INPUT</th>
@@ -28,6 +37,6 @@
                 <td>TEXT</td>
             </tr>
         </table>
-    </p>
+    </p>-->
   </body>
 </html>
