changed text color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li class="item4"><a href="http://placekitten.com/400/300">Text</a></li>
     </ul>
     <p class="title">Job Board App</p>
-    <p>Welcome To The Board</p>
+    <p style="color: #2f3d7e">Welcome To The Board</p>
     <ul class="tableheader">
       <li class="header">text</li>
     </ul>
