--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap"
     rel="stylesheet"
   />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap"
+    rel="stylesheet"
+  />
   <link rel="stylesheet" href="style.css" />
   <head>
     <meta charset="UTF-8" />
@@ -19,24 +23,12 @@
       <li class="item4"><a href="http://placekitten.com/400/300">Text</a></li>
     </ul>
     <p class="title">Job Board App</p>
-    <p style="color: #2f3d7e">Welcome To The Board</p>
+    <p style="color: #2f3d7e; font-family: 'Open Sans'">Welcome To The Board</p>
     <ul class="tableheader">
       <li class="header">text</li>
     </ul>
     <ul class="tablecontent">
       <li class="box">text</li>
     </ul>
-    <!--<p class="chart">
-        <table>
-            <tr>
-                <th>INPUT</th>
-                <th>OUTPUT</th>
-            </tr>
-            <tr>
-                <td>TEXT</td>
-                <td>TEXT</td>
-            </tr>
-        </table>
-    </p>-->
   </body>
 </html>
