added files in gitignore. as well as slight css changes to table. added border radius and color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <ul class="nav">
-      <li class="item1"><a href="http://placekitten.com/200/300">Home</a></li>
+      <li class="item1"><a href="index.html">Home</a></li>
       <li class="item2"><a href="http://placekitten.com/500/300">Text</a></li>
       <li class="item3"><a href="http://placekitten.com/600/300">Text</a></li>
       <li class="item4"><a href="http://placekitten.com/400/300">Text</a></li>
