added 2 api's and attached a loading time function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./script.js"></script>
     <title>Job Board App</title>
   </head>
   <body>
@@ -28,7 +30,10 @@
       <li class="header">text</li>
     </ul>
     <ul class="tablecontent">
-      <li class="box">text</li>
+      <li class="box" id="word"></li>
+      <li class="timer" id="load_time"></li>
+      <li class="excuse" id="excuse"></li>
+      <li class="load_time2" id="load_time2"></li>
     </ul>
   </body>
 </html>
