added more api's

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <li class="timer" id="load_time"></li>
       <li class="excuse" id="excuse"></li>
       <li class="load_time2" id="load_time2"></li>
+      <li class="coffee" id="coffee"></li>
+      <li class="load_time3" id="load_time3"></li>
     </ul>
   </body>
 </html>
